@@ -45,6 +45,7 @@ public:
     virtual int getU8() = 0;
     virtual int lookaheadU8() = 0;
     virtual int readBytes(uint8_t* buf, int reqSize, bool& isErrorOccured) = 0;
+    virtual int readSome(uint8_t** buf, bool& isErrorOccured) = 0;
 };
 
 }; // namespace scheme
